--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dairy-sync</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>LecheFácil</title>
+    <meta name="description" content="Sistema de gestión para fincas lecheras" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
-    <meta property="og:title" content="dairy-sync" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="LecheFácil" />
+    <meta property="og:description" content="Sistema de gestión para fincas lecheras" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <!-- Runtime environment (generated at container start) -->
     <script src="/env.js"></script>
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
